@startuml CK_DatVeXe_ERD
!define USER_COLOR #C8E6C9
!define BUS_COLOR #BBDEFB
!define ROUTE_COLOR #FFE0B2
!define TICKET_COLOR #F8BBD0
!define PAYMENT_COLOR #E1BEE7
!define SUPPORT_COLOR #D1C4E9

skinparam backgroundColor #FAFAFA
skinparam entityBackgroundColor #FFFFFF
skinparam entityBorderColor #424242
skinparam entityFontColor #212121
skinparam arrowColor #424242
skinparam arrowFontColor #424242
skinparam linetype ortho
skinparam handwritten false
skinparam packageBackgroundColor #F5F5F5
skinparam packageBorderColor #BDBDBD

' ===== USER & AUTHENTICATION =====
package "User & Authentication" #USER_COLOR {

entity "users" as users {
  *id : INTEGER <<PK>>
  --
  first_name : VARCHAR(100)
  last_name : VARCHAR(100)
  email : VARCHAR (UNIQUE)
  password : VARCHAR
  phone : VARCHAR(20)
  status : ENUM(ACTIVE, INACTIVE, DELETED, BANNED)
  bus_company_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "roles" as roles {
  *id : INTEGER <<PK>>
  --
  role_name : ENUM(ROLE_USER, ROLE_ADMIN, ROLE_COMPANY_ADMIN, ROLE_DRIVER)
}

entity "user_role" as user_role {
  *user_id : INTEGER <<PK>>
  *role_id : INTEGER <<PK>>
}

entity "refresh_tokens" as refresh_tokens {
  *id : INTEGER <<PK>>
  --
  token : TEXT
  user_id : INTEGER <<FK>>
  expiry_date : TIMESTAMP
  created_at : TIMESTAMP
}

entity "password_reset" as password_reset {
  *id : INTEGER <<PK>>
  --
  user_id : INTEGER <<FK>>
  otp : VARCHAR
  expiry_date : TIMESTAMP
  created_at : TIMESTAMP
}
}

' ===== BUS COMPANY & MANAGEMENT =====
package "Bus Company" #BUS_COLOR {

entity "bus_companies" as bus_companies {
  *id : INTEGER <<PK>>
  --
  company_name : VARCHAR
  image : VARCHAR
  descriptions : LONGTEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "bus_company_registration" as bus_company_registration {
  *id : INTEGER <<PK>>
  --
  company_name : VARCHAR
  registration_number : VARCHAR
  status : ENUM(PENDING, APPROVED, REJECTED)
  user_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}
}

' ===== BUS & VEHICLES =====
package "Bus & Vehicles" #BUS_COLOR {

entity "buses" as buses {
  *id : INTEGER <<PK>>
  --
  name : VARCHAR
  descriptions : TEXT
  license_plate : VARCHAR(50)
  capacity : INTEGER
  status : ENUM(ACTIVE, INACTIVE, MAINTENANCE, DELETED)
  bus_type : ENUM(GHE_NGOI, GHE_NAM)
  company_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "bus_images" as bus_images {
  *id : INTEGER <<PK>>
  --
  image_url : VARCHAR
  bus_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "bus_reviews" as bus_reviews {
  *id : INTEGER <<PK>>
  --
  rating : INTEGER
  review : TEXT
  user_id : INTEGER <<FK>>
  bus_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "drivers" as drivers {
  *id : INTEGER <<PK>>
  --
  full_name : VARCHAR(100)
  phone : VARCHAR(20) (UNIQUE)
  email : VARCHAR(100)
  license_number : VARCHAR(50) (UNIQUE)
  license_type : VARCHAR(20)
  license_expiry_date : DATE
  date_of_birth : DATE
  address : TEXT
  status : ENUM(ACTIVE, INACTIVE, ON_LEAVE, SUSPENDED, DELETED)
  current_bus_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}
}

' ===== STATIONS & ROUTES =====
package "Stations & Routes" #ROUTE_COLOR {

entity "stations" as stations {
  *id : INTEGER <<PK>>
  --
  name : VARCHAR
  image : VARCHAR
  wallpaper : VARCHAR
  descriptions : LONGTEXT
  location : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "bus_station" as bus_station {
  *id : INTEGER <<PK>>
  --
  bus_id : INTEGER <<FK>>
  station_id : INTEGER <<FK>>
  is_active : BOOLEAN
  notes : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "routes" as routes {
  *id : INTEGER <<PK>>
  --
  route_name : VARCHAR
  start_location : VARCHAR
  end_location : VARCHAR
  price : DOUBLE
  duration : INTEGER
  distance : INTEGER
  descriptions : TEXT
  status : ENUM(ACTIVE, INACTIVE)
  departure_station_id : INTEGER <<FK>>
  arrival_station_id : INTEGER <<FK>>
  bus_company_id : INTEGER <<FK>>
  deleted_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "cancellation_policy" as cancellation_policy {
  *id : INTEGER <<PK>>
  --
  refund_percentage : INTEGER
  cancellation_deadline : INTEGER
  route_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}
}

' ===== SCHEDULES & TICKETS =====
package "Schedules & Tickets" #TICKET_COLOR {

entity "schedules" as schedules {
  *id : INTEGER <<PK>>
  --
  departure_time : TIMESTAMP
  arrival_time : TIMESTAMP
  available_seat : INTEGER
  total_seats : INTEGER
  status : ENUM(AVAILABLE, FULL, CANCELLED, COMPLETED)
  route_id : INTEGER <<FK>>
  bus_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "seats" as seats {
  *id : INTEGER <<PK>>
  --
  seat_number : VARCHAR(20)
  seat_type : ENUM(NORMAL, VIP, LUXURY)
  status : ENUM(AVAILABLE, BOOKED, UNAVAILABLE)
  price_for_seat_type : DOUBLE
  bus_id : INTEGER <<FK>>
  row_num : INTEGER
  column_num : INTEGER
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "tickets" as tickets {
  *id : INTEGER <<PK>>
  --
  departure_time : TIMESTAMP
  arrival_time : TIMESTAMP
  seat_type : ENUM(NORMAL, VIP, LUXURY)
  price : DOUBLE
  original_price : DOUBLE
  discount_amount : DOUBLE
  status : ENUM(BOOKED, CANCELLED, COMPLETED, REFUNDED)
  ticket_code : VARCHAR(20) (UNIQUE)
  schedule_id : INTEGER <<FK>>
  seat_id : INTEGER <<FK>>
  user_id : INTEGER <<FK>>
  discount_code_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "discount_codes" as discount_codes {
  *id : INTEGER <<PK>>
  --
  code : VARCHAR(50) (UNIQUE)
  name : VARCHAR
  description : TEXT
  type : ENUM(PERCENTAGE, FIXED_AMOUNT)
  value : DECIMAL(10,2)
  max_discount_amount : DECIMAL(10,2)
  min_order_amount : DECIMAL(10,2)
  usage_limit : INTEGER
  used_count : INTEGER
  expired_at : TIMESTAMP
  created_by : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "discount_usage" as discount_usage {
  *id : INTEGER <<PK>>
  --
  user_id : INTEGER <<FK>>
  ticket_id : INTEGER <<FK>>
  discount_code_id : INTEGER <<FK>>
  used_amount : DOUBLE
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}
}

' ===== PAYMENTS =====
package "Payments" #PAYMENT_COLOR {

entity "payments" as payments {
  *id : INTEGER <<PK>>
  --
  payment_method : ENUM(CREDIT_CARD, DEBIT_CARD, BANK_TRANSFER, WALLET, CASH)
  amount : DOUBLE
  status : ENUM(PENDING, COMPLETED, FAILED, REFUNDED)
  payment_provider_id : INTEGER <<FK>>
  user_id : INTEGER <<FK>>
  ticket_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "payment_providers" as payment_providers {
  *id : INTEGER <<PK>>
  --
  provider_name : VARCHAR
  provider_type : ENUM(STRIPE, PAYPAL, VNPAY, MOMO)
  api_endpoint : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}
}

' ===== HISTORY & SUPPORT =====
package "History & Support" #SUPPORT_COLOR {

entity "bus_history" as bus_history {
  *id : INTEGER <<PK>>
  --
  departure_time : TIMESTAMP
  arrival_time : TIMESTAMP
  actual_departure_time : TIMESTAMP
  actual_arrival_time : TIMESTAMP
  status : ENUM(SCHEDULED, IN_PROGRESS, COMPLETED, CANCELLED)
  total_passengers : INTEGER
  total_revenue : DOUBLE
  notes : TEXT
  bus_id : INTEGER <<FK>>
  route_id : INTEGER <<FK>>
  schedule_id : INTEGER <<FK>>
  station_id : INTEGER <<FK>>
  created_at : TIMESTAMP
}

entity "conversations" as conversations {
  *id : INTEGER <<PK>>
  --
  user_id : INTEGER <<FK>>
  admin_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "messages" as messages {
  *id : INTEGER <<PK>>
  --
  content : TEXT
  message_type : ENUM(TEXT, IMAGE, FILE)
  sender_id : INTEGER <<FK>>
  conversation_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "articles" as articles {
  *id : INTEGER <<PK>>
  --
  title : VARCHAR
  content : LONGTEXT
  image : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "banners" as banners {
  *id : INTEGER <<PK>>
  --
  title : VARCHAR
  image : VARCHAR
  link : VARCHAR
  status : ENUM(ACTIVE, INACTIVE)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}
}

' ===== ROLES =====
package "Roles" #USER_COLOR {

entity "roles" as roles {
  *id : INTEGER <<PK>>
  --
  role_name : ENUM(ROLE_USER, ROLE_ADMIN, ROLE_COMPANY_ADMIN, ROLE_DRIVER)
}
}

' ===== RELATIONSHIPS =====

' User Relationships
users ||--o{ user_role : has
roles ||--o{ user_role : has
users }o--|| bus_companies : "belongs to"
users ||--o{ refresh_tokens : generates
users ||--o{ password_reset : requests
users ||--o{ conversations : initiates
users ||--o{ conversations : admin_replies
users ||--o{ messages : sends
users ||--o{ discount_codes : creates
users ||--o{ bus_reviews : writes
users ||--o{ payments : makes
users ||--o{ tickets : purchases
users ||--o{ discount_usage : applies
users ||--o{ bus_company_registration : submits

' Bus Company Relationships
bus_companies ||--o{ buses : owns
bus_companies ||--o{ routes : manages

' Bus Relationships
buses ||--o{ schedules : operates
buses ||--o{ seats : contains
buses ||--o{ bus_images : has
buses ||--o{ bus_reviews : receives
buses ||--o{ bus_history : has_history
buses ||--o{ bus_station : participates_in
buses ||--o{ drivers : "assigned to"

' Station Relationships
stations ||--o{ bus_station : participates_in
stations ||--o{ bus_history : visits
routes }o--|| stations : "departure from"
routes }o--|| stations : "arrival to"

' Route Relationships
routes ||--o{ schedules : has
routes ||--o{ bus_history : has_history
routes ||--o{ cancellation_policy : defines

' Schedule Relationships
schedules ||--o{ tickets : contains
schedules ||--o{ bus_history : has_history

' Seat Relationships
seats ||--o{ tickets : "has_seats"

' Ticket Relationships
tickets ||--o{ payments : "related to"
tickets ||--o{ discount_usage : "applies discount"

' Discount Relationships
discount_codes ||--o{ tickets : applies
discount_codes ||--o{ discount_usage : uses

' Payment Relationships
payment_providers ||--o{ payments : processes

' Conversation Relationships
conversations ||--o{ messages : contains

@enduml
